# Modell-CPM-V2

./: app.py  pyproject.toml
attached_assets/: .replit  app.py  pyproject.toml
